--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 body {
     padding: 10px;
     box-sizing: border-box;
+}
+
+h1 {
+    font-size: 50px;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-align: center;
+    font-family: "montserrat", sans-serif;
 }
 
 img {
@@ -61,18 +71,50 @@ button {
 }
 
 button:hover {
-    background-color: #848484a9;
+    background-color: #63efff;
 }
 
 p {
-    font-size: 20px;
+    font-size: 14px;
+    font-family: "Poppins", sans-serif;
+    text-transform: capitalize;
 }
 
-span {
-    margin-right: 10px;
+.text {
+    font-size: 14px;
+    margin: 20px auto;
 }
 
-#issMap {
+#myMap {
     height: 500px;
     width: 100%;
+}
+
+.leaflet-shadow-pane img {
+    border: none !important;
+}
+
+.leaflet-marker-icon {
+    border: none !important;
+    outline: none !important;
+    box-shadow: none !important;
+  }
+
+  form {
+    display: block;
+    width: 50%;
+    padding: 10px 0;
+    box-sizing: border-box;
+}
+
+form input {
+    padding: 10px 10px;
+    box-sizing: border-box;
+    border: 1px solid #000;
+    border-radius: 5px;
+    width: 30%;
+}
+
+form button {
+    display: block;
 }
